# gymbuddy

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  docker-compose.yml  gymbuddy-template.toml  merge.sh  models.md  start.sh
.kanban/: .gitignore  board.json  config.json
backend/: Cargo.toml
backend/catalogue/: 01-exercises.sql  02-metrics.sql
backend/migrations/01-schema/: down.sql  up.sql
backend/migrations/02-catalogue-seed/: down.sql  up.sql
backend/migrations/04-bent_over_barbell_row/: up.sql
backend/migrations/05-confide-support/: up.sql
backend/migrations/06-one_arm_dumbbell_row/: up.sql
backend/migrations/07-rest-timers/: down.sql  up.sql
backend/migrations/07-session-timers/: down.sql  up.sql
backend/migrations/08-workout_planner/: down.sql  up.sql
backend/migrations/09-session_overrides/: down.sql
backend/migrations/10-generalise_goals/: up.sql
backend/migrations/11-session_outcome/: up.sql
backend/science/: beginner-programming.md  competing-goals.md  goal-body-composition.md  goal-endurance.md  goal-habit.md  goal-strength.md  hypertrophy.md  injury-knee.md  injury-lower-back.md  injury-shoulder.md  progressive-overload.md  scope-and-safety.md  session-structure.md  volume-frequency-recovery.md
backend/src/: config.rs  lib.rs  main.rs  text.rs
backend/src/assistant/: actions.rs  commands.rs  handler.rs  matching.rs  mod.rs  parser.rs  prompts.rs
backend/src/assistant/handler/: affirmative.rs  context.rs  continuity.rs  designer.rs  dispatch.rs  execution.rs  interview.rs  llm.rs  onboarding.rs  programme.rs  progress.rs  review.rs  test_support.rs
backend/src/db/: body_metrics.rs  catalogue.rs  conversation.rs  dashboard.rs  database.rs  entries.rs  exercise_types.rs  goals.rs  groups.rs  health.rs  import.rs  metrics.rs  migrations.rs  mod.rs  models.rs  philosophy.rs  planner.rs  programmes.rs  programs.rs  progress.rs  reviews.rs  rosters.rs  users.rs
backend/src/dump/: compare.rs  counts.rs  migrate.rs  mod.rs  model.rs  probe.rs  tests.rs  v1.rs  v2.rs
backend/src/progression/: mod.rs  tests.rs
backend/src/render/: mod.rs  plain.rs  telegram.rs
backend/src/science/: contraindications.rs  mod.rs  retrieval.rs  tests.rs
backend/src/science/contraindications/: tests.rs
backend/src/science/retrieval/: tests.rs
backend/src/telegram/: chunk.rs  mod.rs
backend/src/transport/: confide.rs  mod.rs
backend/src/voice/: mod.rs
backend/tests/: cli_export.rs  confide_roundtrip.rs  integration_tests.rs
backend/tests/fixtures/: mod.rs  v1_export.snapshot.json  v1_seed.sql
backend/tests/fixtures/v1_migrations/05-confide-support/: down.sql
backend/tests/fixtures/v1_migrations/09-session_overrides/: up.sql
backend/tests/fixtures/v1_migrations/10-generalise_goals/: down.sql
backend/tests/fixtures/v1_migrations/11-session_outcome/: down.sql
backend/tests/fixtures/v1_migrations/12-programmes/: down.sql  up.sql
backend/tests/fixtures/v1_migrations/13-body_metrics/: up.sql
backend/tests/helpers/: mod.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs  view.rs
crates/timer/: Cargo.toml
crates/timer/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  audio.rs  completion.rs  config.rs  history.rs  main.rs  render.rs  ui.rs
planning/: core.md  done.md  product_areas.md  telegram.md  tui.md
