[workspace]
members = [
    "backend"
]
resolver = "2"

[workspace.package]
version = "0.21.0"
edition = "2024"
license = "MPL-2"

[workspace.dependencies]
corre-sdk = { version = "0.21", git = "https://github.com/corre-pa/corre", branch = "main" }
corre-core = { version = "0.21", git = "https://github.com/corre-pa/corre", branch = "main" }
corre-llm = { version = "0.21", git = "https://github.com/corre-pa/corre", branch = "main" }
corre-safety = { version = "0.21", git = "https://github.com/corre-pa/corre", branch = "main" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_ng = "0.9"
toml = "0.8"

# HTTP
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Time & scheduling
chrono = { version = "0.4", features = ["serde"] }
tokio-cron-scheduler = "0.13"

# MCP
rmcp = { version = "0.1", features = ["client", "server", "macros", "transport-child-process", "transport-io"] }
schemars = "0.8"

# Search
tantivy = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Error handling
anyhow = "1"
thiserror = "2"

# Async trait
async-trait = "0.1"

# Misc
futures = "0.3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
url = "2"
ammonia = "4"
aho-corasick = "1"
log = "0.4.29"
regex = "1"
dialoguer = "0.11"
console = "0.15"
sysinfo = "0.34"
async-stream = "0.3"
tokio-stream = "0.1"
rusqlite = { version = "0.37", features = ["bundled"] }
rusqlite_migration = { version = "2", features = ["from-directory"] }
include_dir = "0.7"
csv = "1"
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
hex = "0.4"
dashmap = "6"
dotenvy = "0.15.7"
landlock = "0.4"
libc = "0.2"