[package]
name = "gymbuddy-backend"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Voice-driven gym tracker and personal trainer"

[lib]
path = "src/lib.rs"

[[bin]]
name = "gymbuddy"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
corre-core = { workspace = true }
corre-llm = { workspace = true }
corre-safety = { workspace = true }
corre-sdk = { workspace = true }
dashmap = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rusqlite = { workspace = true }
rusqlite_migration = { workspace = true }
include_dir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
